# hahabot

./: .env.example  .gitignore  README.md  deploy.sh  docker-compose.yml
.github/workflows/: deploy-production.yml  docker-publish.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260321_01_create_chat_tables.py  20260321_02_fix_message_role_constraint.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: chat.py  sessions.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/repositories/: messages.py  sessions.py
backend/app/schemas/: chat.py  session.py
backend/app/services/: chat_service.py  qwen_client.py  sse.py  title_service.py  transcript_service.py
backend/haha_chatbot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py
backend/tests/api/: test_chat_stream.py  test_sessions.py
backend/tests/db/: test_message_role_enum.py
backend/tests/services/: test_title_service.py  test_transcript_service.py
deploy/: deploy.sh  remote-deploy.sh  tencent-cloud.md
deploy/tests/: test_deploy.sh  test_remote_deploy.sh
docs/superpowers/plans/: 2026-03-21-haha-chatbot.md  2026-03-22-haha-chatbot-cd.md
docs/superpowers/specs/: 2026-03-21-haha-chatbot-design.md  2026-03-22-haha-chatbot-cd-design.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/components/: ChatPane.test.tsx  (+6 more)
(+7 files in other folders)
